--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,24 +1,9 @@
-
-#server:
-#  port: 8090
-
 spring:
   application:
     name: mcp-server
   main:
     web-application-type: none
     banner-mode: off
-  # 默认 dev 环境
-#  profiles:
-#    active: dev
-  ai:
-    mcp:
-      server:
-        stdio: true # 启用stdio模式
-        name: mcp-server
-        version: 0.0.1
-
-endpoint:
-  mianshiya:
-    searchQuestion: https://api.mianshiya.com/api/question/mcp/search
-    resultLink: https://www.mianshiya.com/question/%s
+  #  默认 dev 环境
+  profiles:
+    active: dev
