feat: 新增根据json返回拼装后的代码模板

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <name>mcp-codestyle-server</name>
     <description>mcp-codestyle-server</description>
     <properties>
+        <jackson.version>2.17.0</jackson.version>
         <!--  Java运行环境。要求JDK版本17+ -->
         <java.version>17</java.version>
     </properties>
@@ -41,6 +42,21 @@
             <artifactId>hutool-all</artifactId>
             <version>5.8.25</version>
         </dependency>
+        <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-core</artifactId>
+        <version>${jackson.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>${jackson.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-annotations</artifactId>
+        <version>${jackson.version}</version>
+    </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
