--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,10 @@
             <artifactId>spring-ai-mcp-server-spring-boot-starter</artifactId>
             <version>1.0.0-M6</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <!-- https://hutool.cn/docs/index.html#/-->
         <dependency>
             <groupId>cn.hutool</groupId>
