feat: 优化工具类，添加远程配置与模板下载

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,9 +16,8 @@ spring:
 # 仓库配置
 repository:
   # 本地基础路径，可通过JVM参数 -Dcache.base-path=自定义路径 覆盖
-  #local-path: ${java.io.tmpdir} # 本地仓库地址
-  local-path: D://IPBD//cangku
-  remote-path: http://xxxxxxx  # 默认是公有服务器地址
-  # 仓库目录配置
-#  dir: ${repository.local-path}/codestyle-cache
-  dir: D:\IPBD\cangku/codestyle-cache
+  # 示例: java -Dcache.base-path=/custom/path -jar app.jar
+  local-path: D:/IPBD/cangku  # 默认本地路径
+  remote-path: http://xxxxxxx  # 远程仓库地址
+  # 仓库目录配置(可选,不配置则自动使用 local-path/codestyle-cache)
+  dir: D:/IPBD/cangku/codestyle-cache
