feat: 更新依赖版本与路径规范问题

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 spring:
   application:
     name: mcp-codestyle-server
-  main: # 不启动web服务，并且关闭web启动时候的横幅
+  main: # 不启动web服务,并且关闭web启动时候的横幅
     web-application-type: none
     banner-mode: off
   ai:
@@ -12,7 +12,10 @@ spring:
       server:
         name: mcp-codestyle-server # 服务器名称
         version: 0.0.1 # 服务器版本
+        type: SYNC # 服务器类型: SYNC(同步) 或 ASYNC(异步)
         stdio: true # 启用stdio模式
+        annotation-scanner:
+          enabled: true # 启用注解扫描
 # 仓库配置
 repository:
   # 本地基础路径，可通过JVM参数 -Dcache.base-path=自定义路径 覆盖
